# llm-local

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
evals/: EVAL_RESULTS.md  LEADERBOARD.md  MODELS.md  PROTOCOL.md  README.md  grade.py  run.py  rust_check.py  scenarios.json
evals/agentic/: .gitignore  README.md  _exec.py  build_gold.py  grade_personal.py  repair_loop.py  run_personal.py  run_subset.py  run_suite.sh  run_think.py  scenarios_cowork.json  scenarios_personal.json  scenarios_rerun.json  scenarios_rerun_fe.json  speed_probe.py  task_runner.py  tool_call_test.py
src/llm_local/: __init__.py  anthropic_proxy.py  cli.py  config.py  paths.py  process.py  templates.py
tests/: test_cli.py  test_config.py  test_proxy.py
