[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "llm-local"
version = "0.2.0"
description = "Small CLI for managing local vllm-mlx models and agent-friendly OpenAI/Anthropic-compatible endpoints."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Julien" }
]
keywords = ["mlx", "vllm", "apple-silicon", "local-llm", "agents", "qwen"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
  "Topic :: System :: Systems Administration",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
llm-local = "llm_local.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
